--- a/i18n/default.json
+++ b/i18n/default.json
@@ -2,5 +2,6 @@
   "config.toggle-auto-casting": "Toggle Auto-Casting",
   "config.toggle-auto-casting.tooltip": "Press this key to toggle automatic fishing rod casting",
   "casting.start": "Auto-casting enabled",
-  "casting.stop": "Auto-casting disabled"
+  "casting.stop": "Auto-casting disabled",
+  "baiting.applied": "Auto applied bait: "
 }
