--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -2,5 +2,6 @@
   "config.toggle-auto-casting": "自动抛竿开关",
   "config.toggle-auto-casting.tooltip": "按此键开关自动抛竿功能",
   "casting.start": "自动抛竿已启用",
-  "casting.stop": "自动抛竿已禁用"
+  "casting.stop": "自动抛竿已禁用",
+  "baiting.applied": "已自动添饵："
 } 
