--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -1,7 +1,13 @@
 {
-  "config.toggle-auto-casting": "自动抛竿开关",
-  "config.toggle-auto-casting.tooltip": "按此键开关自动抛竿功能",
+  "config.toggle-auto-casting": "切换自动抛竿",
+  "config.toggle-auto-casting.tooltip": "按此键切换自动抛竿功能",
+  "config.enable-auto-baiting": "启用自动补充鱼饵",
+  "config.enable-auto-baiting.tooltip": "启用后，当钓竿上的鱼饵耗尽时会自动从背包中补充",
+  "config.enable-grab-treasure": "启用自动收集宝箱",
+  "config.enable-grab-treasure.tooltip": "启用后，在钓鱼小游戏中自动收集宝箱中的物品",
+  "config.enable-skip-fish-showing": "启用跳过鱼展示",
+  "config.enable-skip-fish-showing.tooltip": "启用后，跳过钓到鱼后的展示动画",
   "casting.start": "自动抛竿已启用",
   "casting.stop": "自动抛竿已禁用",
-  "baiting.applied": "已自动添饵："
+  "baiting.applied": "已补充鱼饵："
 } 
