--- a/i18n/default.json
+++ b/i18n/default.json
@@ -1,6 +1,6 @@
 ﻿{
-  "config.toggle-auto-casting": "Toggle Auto-Casting",
-  "config.toggle-auto-casting.tooltip": "Press this key to toggle automatic fishing rod casting.",
+  "config.toggle-auto-fishing": "Toggle Auto-Fishing",
+  "config.toggle-auto-fishing.tooltip": "Press this key to toggle automatic fishing.",
   "config.enable-auto-baiting": "Enable Auto-Baiting",
   "config.enable-auto-baiting.tooltip": "When enabled, automatically applies bait to the fishing rod when it runs out.",
   "config.enable-auto-tackling": "Enable Auto-Tackling",
@@ -9,11 +9,16 @@
   "config.enable-grab-treasure.tooltip": "When enabled, automatically collects items from treasure chests during fishing.",
   "config.enable-skip-fish-showing": "Enable Skip Fish Showing",
   "config.enable-skip-fish-showing.tooltip": "When enabled, skips the animation of showing caught fish.",
-  "config.min-stamina-for-auto-casting": "Minimum Stamina for Auto-Casting",
-  "config.min-stamina-for-auto-casting.tooltip": "Auto-casting will be disabled when stamina falls below this value.",
-  "casting.start": "Auto-casting enabled",
-  "casting.stop": "Auto-casting disabled",
-  "casting.low_stamina": "Auto-casting disabled: Low stamina",
+  "config.min-stamina-for-auto-fishing": "Minimum Stamina for Auto-Fishing",
+  "config.min-stamina-for-auto-fishing.tooltip": "Auto-fishing will be disabled when stamina falls below this value.",
+  "config.enable-auto-catch-familiar-fish": "Auto-Catch Familiar Fish",
+  "config.enable-auto-catch-familiar-fish.tooltip": "When enabled, automatically catches fish that you've caught at least 5 times before.",
+  "config.min-catch-count-for-auto-catch": "Minimum Catch Count for Auto-Catch",
+  "config.min-catch-count-for-auto-catch.tooltip": "The number of times a fish must be caught before it's considered 'familiar' and eligible for auto-catching.",
+  "casting.start": "Auto-fishing enabled",
+  "casting.stop": "Auto-fishing disabled",
+  "casting.low_stamina": "Auto-fishing disabled: Low stamina",
   "baiting.applied": "Applied bait: ",
-  "tackling.applied": "Applied tackle: "
+  "tackling.applied": "Applied tackle: ",
+  "fishing.auto_caught": "Auto-caught: "
 }
