--- a/i18n/default.json
+++ b/i18n/default.json
@@ -15,9 +15,9 @@
   "config.enable-auto-catch-familiar-fish.tooltip": "When enabled, automatically catches fish that you've caught at least 5 times before.",
   "config.min-catch-count-for-auto-catch": "Minimum Catch Count for Auto-Catch",
   "config.min-catch-count-for-auto-catch.tooltip": "The number of times a fish must be caught before it's considered 'familiar' and eligible for auto-catching.",
-  "casting.start": "Auto-fishing enabled",
-  "casting.stop": "Auto-fishing disabled",
-  "casting.low_stamina": "Auto-fishing disabled: Low stamina",
+  "fishing.start": "Auto-fishing enabled",
+  "fishing.stop": "Auto-fishing disabled",
+  "fishing.low_stamina": "Auto-fishing disabled: Low stamina",
   "baiting.applied": "Applied bait: ",
   "tackling.applied": "Applied tackle: ",
   "fishing.auto_caught": "Auto-caught: "
