--- a/i18n/default.json
+++ b/i18n/default.json
@@ -2,23 +2,28 @@
   "config.toggle-auto-fishing": "Toggle Auto-Fishing",
   "config.toggle-auto-fishing.tooltip": "Press this key to toggle automatic fishing.",
   "config.enable-auto-baiting": "Enable Auto-Baiting",
-  "config.enable-auto-baiting.tooltip": "When enabled, automatically applies bait to the fishing rod when it runs out.",
+  "config.enable-auto-baiting.tooltip": "When enabled, automatically applies bait from inventory when the fishing rod's bait is depleted.",
   "config.enable-auto-tackling": "Enable Auto-Tackling",
-  "config.enable-auto-tackling.tooltip": "When enabled, automatically applies tackle to the fishing rod when it breaks.",
+  "config.enable-auto-tackling.tooltip": "When enabled, automatically applies tackle from inventory when the fishing rod's tackle is broken.",
   "config.enable-grab-treasure": "Enable Auto-Grab Treasure",
-  "config.enable-grab-treasure.tooltip": "When enabled, automatically collects items from treasure chests during fishing.",
-  "config.enable-skip-fish-showing": "Enable Skip Fish Showing",
-  "config.enable-skip-fish-showing.tooltip": "When enabled, skips the animation of showing caught fish.",
+  "config.enable-grab-treasure.tooltip": "When enabled, automatically collects items from fishing treasure chests.",
+  "config.enable-skip-fish-showing": "Skip Fish Showing",
+  "config.enable-skip-fish-showing.tooltip": "When enabled, skips the fish showing animation after catching a fish.",
   "config.min-stamina-for-auto-fishing": "Minimum Stamina for Auto-Fishing",
-  "config.min-stamina-for-auto-fishing.tooltip": "Auto-fishing will be disabled when stamina falls below this value.",
-  "config.enable-auto-catch-familiar-fish": "Auto-Catch Familiar Fish",
-  "config.enable-auto-catch-familiar-fish.tooltip": "When enabled, automatically catches fish that you've caught at least 5 times before.",
-  "config.min-catch-count-for-auto-catch": "Minimum Catch Count for Auto-Catch",
-  "config.min-catch-count-for-auto-catch.tooltip": "The number of times a fish must be caught before it's considered 'familiar' and eligible for auto-catching.",
+  "config.min-stamina-for-auto-fishing.tooltip": "Auto-fishing will be disabled when stamina is below this value.",
+  "config.min-catch-count-for-skip-fishing": "Minimum Catch Count for Skip Fishing",
+  "config.min-catch-count-for-skip-fishing.tooltip": "When a fish's catch count reaches this value, the fishing minigame will be automatically skipped.",
+  "config.min-perfect-count-for-skip-fishing": "Minimum Perfect Count for Skip Fishing",
+  "config.min-perfect-count-for-skip-fishing.tooltip": "When a fish's perfect catch count reaches this value, the fishing minigame will be automatically skipped.",
   "fishing.start": "Auto-fishing enabled",
   "fishing.stop": "Auto-fishing disabled",
-  "fishing.low_stamina": "Auto-fishing disabled: Low stamina",
+  "fishing.low_stamina": "Not enough stamina for auto-fishing",
   "baiting.applied": "Applied bait: ",
   "tackling.applied": "Applied tackle: ",
-  "fishing.auto_caught": "Auto-caught: "
+  "config.fish-counter.title": "Fishing Statistics",
+  "config.fish-counter.unknown-fish": "Unknown Fish",
+  "config.fish-counter.catch-count": "Catch Count: ",
+  "config.fish-counter.perfect-count": "Perfect Catch Count: ",
+  "bobber-bar.familiar": "You caught a familiar {fishName}!",
+  "bobber-bar.needed": "You need {catchNeeded} more catches and {perfectNeeded} perfect catches to skip fishing minigame for {fishName}."
 }
