--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -11,14 +11,19 @@
   "config.enable-skip-fish-showing.tooltip": "启用后，跳过钓到鱼后的展示动作",
   "config.min-stamina-for-auto-fishing": "自动钓鱼最低体力要求",
   "config.min-stamina-for-auto-fishing.tooltip": "当体力低于此值时，自动钓鱼功能将被禁用",
-  "config.enable-auto-catch-familiar-fish": "自动捕获熟悉鱼类",
-  "config.enable-auto-catch-familiar-fish.tooltip": "启用后，会自动捕获已经钓到过至少5次的鱼类",
-  "config.min-catch-count-for-auto-catch": "自动捕获最低捕获次数",
-  "config.min-catch-count-for-auto-catch.tooltip": "鱼类需要被捕获的次数，达到此次数后才会被视为\"熟悉\"并自动捕获",
+  "config.min-catch-count-for-skip-fishing": "跳过钓鱼小游戏所需捕获次数",
+  "config.min-catch-count-for-skip-fishing.tooltip": "当某种鱼的捕获次数达到此值时，将自动跳过钓鱼小游戏",
+  "config.min-perfect-count-for-skip-fishing": "跳过钓鱼小游戏所需完美捕获次数",
+  "config.min-perfect-count-for-skip-fishing.tooltip": "当某种鱼的完美捕获次数达到此值时，将自动跳过钓鱼小游戏",
   "fishing.start": "自动钓鱼已启用",
   "fishing.stop": "自动钓鱼已禁用",
   "fishing.low_stamina": "自动钓鱼已禁用：体力不足",
   "baiting.applied": "已补充鱼饵：",
   "tackling.applied": "已补充钓具：",
-  "fishing.auto_caught": "自动捕获："
+  "config.fish-counter.title": "捕鱼统计",
+  "config.fish-counter.unknown-fish": "未知鱼类",
+  "config.fish-counter.catch-count": "捕获次数：",
+  "config.fish-counter.perfect-count": "完美捕获次数：",
+  "bobber-bar.familiar": "你抓到了一条熟悉的{fishName}！",
+  "bobber-bar.needed": "你还需要{catchNeeded}次捕获和{perfectNeeded}次完美捕获才能跳过{fishName}的钓鱼小游戏。"
 } 
