--- a/i18n/default.json
+++ b/i18n/default.json
@@ -9,11 +9,11 @@
   "config.enable-grab-treasure.tooltip": "When enabled, automatically collects items from fishing treasure chests.",
   "config.enable-skip-fish-showing": "Skip Fish Showing",
   "config.enable-skip-fish-showing.tooltip": "When enabled, skips the fish showing animation after catching a fish.",
-  "config.min-stamina-for-auto-fishing": "Minimum Stamina for Auto-Fishing",
+  "config.min-stamina-for-auto-fishing": "Min Stamina for Auto-Fishing",
   "config.min-stamina-for-auto-fishing.tooltip": "Auto-fishing will be disabled when stamina is below this value.",
-  "config.min-catch-count-for-skip-minigame": "Minimum Catch Count for Skip Fishing",
+  "config.min-catch-count-for-skip-minigame": "Min Catches for Skip Minigame",
   "config.min-catch-count-for-skip-minigame.tooltip": "When a fish's catch count reaches this value, the fishing minigame will be automatically skipped.",
-  "config.min-perfect-count-for-skip-minigame": "Minimum Perfect Count for Skip Fishing",
+  "config.min-perfect-count-for-skip-minigame": "Min Perfects for Skip Minigame",
   "config.min-perfect-count-for-skip-minigame.tooltip": "When a fish's perfect catch count reaches this value, the fishing minigame will be automatically skipped.",
   "config.enable-auto-casting": "Enable Auto-Casting",
   "config.enable-auto-casting.tooltip": "When enabled, automatically casts the fishing rod.",
