--- a/i18n/default.json
+++ b/i18n/default.json
@@ -19,17 +19,17 @@
   "config.enable-auto-casting.tooltip": "When enabled, automatically casts the fishing rod.",
   "config.enable-skip-minigame": "Enable Skip Minigame",
   "config.enable-skip-minigame.tooltip": "When enabled, skips the fishing minigame for fish that meet the catch count requirements.",
-  "fishing.start": "Auto-fishing enabled",
-  "fishing.stop": "Auto-fishing disabled",
-  "fishing.low_stamina": "Not enough stamina for auto-fishing",
-  "baiting.applied": "Applied bait: ",
-  "tackling.applied": "Applied tackle: ",
   "config.fish-counter.title": "Fishing Statistics",
   "config.fish-counter.unknown-fish": "Unknown Fish",
   "config.fish-counter.catch-count": "Catch Count: ",
   "config.fish-counter.perfect-count": "Perfect Catch Count: ",
-  "bobber-bar.familiar": "You are familiar with it!",
-  "bobber-bar.needed": "{{catchNeeded}} catches + {{perfectNeeded}} perfect more to skip minigame for {{fishName}}.",
   "config.section.auto-fishing": "Auto-Fishing Settings",
-  "config.section.minigame": "Fishing Minigame Settings"
+  "config.section.minigame": "Fishing Minigame Settings",
+  "fishing.start": "Auto-fishing enabled",
+  "fishing.stop": "Auto-fishing disabled",
+  "fishing.low_stamina": "Not enough stamina for auto-fishing",
+  "baiting.applied": "Auto applied bait: ",
+  "tackling.applied": "Auto applied tackle: ",
+  "bobber-bar.familiar": "You are familiar with it!",
+  "bobber-bar.needed": "{{catchNeeded}} catches + {{perfectNeeded}} perfect more to skip minigame for {{fishName}}."
 }
