--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -19,17 +19,17 @@
   "config.enable-auto-casting.tooltip": "启用后，将自动抛出钓竿",
   "config.enable-skip-minigame": "启用跳过钓鱼小游戏",
   "config.enable-skip-minigame.tooltip": "启用后，对于满足捕获次数要求的鱼类将自动跳过钓鱼小游戏",
+  "config.fish-counter.title": "捕鱼统计",
+  "config.fish-counter.unknown-fish": "未知鱼类",
+  "config.fish-counter.catch-count": "捕获次数：",
+  "config.fish-counter.perfect-count": "完美捕获次数：",
+  "config.section.auto-fishing": "自动钓鱼设置",
+  "config.section.minigame": "钓鱼小游戏设置",
   "fishing.start": "自动钓鱼已启用",
   "fishing.stop": "自动钓鱼已禁用",
   "fishing.low_stamina": "自动钓鱼已禁用：体力不足",
   "baiting.applied": "已补充鱼饵：",
   "tackling.applied": "已补充钓具：",
-  "config.fish-counter.title": "捕鱼统计",
-  "config.fish-counter.unknown-fish": "未知鱼类",
-  "config.fish-counter.catch-count": "捕获次数：",
-  "config.fish-counter.perfect-count": "完美捕获次数：",
   "bobber-bar.familiar": "你熟悉这种鱼！",
-  "bobber-bar.needed": "还需要{{catchNeeded}}次捕获和{{perfectNeeded}}次完美捕获以跳过{{fishName}}的钓鱼小游戏",
-  "config.section.auto-fishing": "自动钓鱼设置",
-  "config.section.minigame": "钓鱼小游戏设置"
+  "bobber-bar.needed": "还需要{{catchNeeded}}次捕获和{{perfectNeeded}}次完美捕获以跳过{{fishName}}的钓鱼小游戏"
 }
