--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -15,6 +15,10 @@
   "config.min-catch-count-for-skip-minigame.tooltip": "当某种鱼的捕获次数达到此值时，将自动跳过钓鱼小游戏",
   "config.min-perfect-count-for-skip-minigame": "跳过钓鱼小游戏所需完美捕获次数",
   "config.min-perfect-count-for-skip-minigame.tooltip": "当某种鱼的完美捕获次数达到此值时，将自动跳过钓鱼小游戏",
+  "config.skip-minigame-with-perfect": "完美捕获时跳过小游戏",
+  "config.skip-minigame-with-perfect.tooltip": "启用后，自动完成钓鱼小游戏并获得完美捕获，最大化鱼的品质",
+  "config.skip-minigame-with-treasure": "出现宝箱时跳过小游戏",
+  "config.skip-minigame-with-treasure.tooltip": "启用后，当出现宝箱时自动完成钓鱼小游戏并收集宝箱",
   "config.enable-auto-casting": "启用自动抛竿",
   "config.enable-auto-casting.tooltip": "启用后，将自动抛出钓竿",
   "config.enable-skip-minigame": "启用跳过钓鱼小游戏",
